# github_copilot_openai_api_wrapper

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  com.github.copilot-wrapper.plist  daemon.sh  pyproject.toml  test_e2e.py
rust/: Cargo.toml
rust/src/: auth.rs  config.rs  copilot.rs  main.rs  models.rs
src/: auth.py  auth.rs  config.py  config.rs  copilot.rs  copilot_client.py  lib.rs  main.py  main.rs  middleware.py  models.py  models.rs  routes.rs
tests/: api_test.rs
