[project]
name = "github-copilot-openai-wrapper"
version = "0.1.0"
description = "Local OpenAI-compatible API wrapper for GitHub Copilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
copilot-wrapper = "src.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100
