[package]
name = "copilot-wrapper"
version = "0.2.0"
edition = "2024"
description = "Minimal OpenAI-compatible API proxy for GitHub Copilot"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt", "macros", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
tokio-stream = "0.1"
bytes = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
